--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>PWA</title>
     <link rel="manifest" href="./manifest.json">
+    <script src="./index.js"></script>
 </head>
 <body>
-    hello 
+    <h3>测试demo</h3>
 </body>
 </html>
