fix:修改主页面字段

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- seo -->
+    <meta name="description" content="A sample PWA">
+    <meta name="theme-color" content="pink" />
     <title>PWA</title>
     <link rel="manifest" href="./manifest.json">
+    <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
 </head>
 <body>
-    <h3>测试demo</h3>
+    <h3>测试demo5</h3>
     <div class="test-text"></div>
 </body>
 </html>
