fix:兼容ios生成主屏幕图标

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <meta name="description" content="A sample PWA">
     <meta name="theme-color" content="pink" />
     <title>PWA</title>
+    <!-- ios兼容 -->
+    <meta name="msapplication-TileImage" content="./image/logo3.jpg">
+    <meta name="msapplication-TileColor" content="pink">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="blue">
+    <meta name="apple-mobile-web-app-title" content="点触">
+    <link rel="apple-touch-icon" sizes="192x192" href="./image/logo.jpeg" />
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
