--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="点触">
+    <link rel="apple-touch-icon-precomposed" href="./image/logo1.png"/>
     <link rel="apple-touch-icon" sizes="57x57" href="./image/logo3.jpg" />
     <link rel="apple-touch-icon" sizes="72x72" href="./image/logo3.jpg" />
     <link rel="apple-touch-icon" sizes="114x114" href="./image/logo3.jpg" />
@@ -24,7 +25,7 @@
     <script src="./index.js"></script>
 </head>
 <body>
-    <h3>测试demo1</h3>
+    <h3>测试demo2</h3>
     <div class="test-text"></div>
 </body>
 </html>
