fix:ios主屏幕图标

--- a/index.html
+++ b/index.html
@@ -9,23 +9,19 @@
     <meta name="theme-color" content="pink" />
     <title>PWA</title>
     <!-- ios兼容 -->
-    <meta name="msapplication-TileImage" content="./image/logo3.jpg">
-    <meta name="msapplication-TileColor" content="pink">
+    <!-- <meta name="msapplication-TileImage" content="./image/logo1.png">
+    <meta name="msapplication-TileColor" content="pink"> -->
     <!-- 删除默认的苹果工具栏和菜单栏 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="点触">
-    <link rel="apple-touch-icon-precomposed" href="./image/logo1.png"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="./image/logo3.jpg" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./image/logo3.jpg" />
-    <link rel="apple-touch-icon" sizes="114x114" href="./image/logo3.jpg" />
-    <link rel="apple-touch-icon" sizes="144x144" href="./image/logo3.jpg" />
+    <link rel="apple-touch-icon"  href="./image/logo1.png" />
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
 </head>
 <body>
-    <h3>测试demo2</h3>
+    <h3>测试demo3</h3>
     <div class="test-text"></div>
 </body>
 </html>
