--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- seo -->
     <meta name="description" content="A sample PWA">
-    <meta name="theme-color" content="pink" />
     <title>PWA</title>
     <!-- ios兼容 -->
     <!-- <meta name="msapplication-TileImage" content="./image/logo1.png">
@@ -15,13 +14,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="点触">
-    <link rel="apple-touch-icon"  href="./image/logo1.png" />
+    <link rel="apple-touch-icon"  href="./image/logo.png" />
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
 </head>
 <body>
-    <h3>测试demo3</h3>
+    <h3>测试demo2</h3>
     <div class="test-text"></div>
 </body>
 </html>
