--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="点触">
-    <link rel="apple-touch-icon"  href="./image/logo2.png" />
+    <!-- <link rel="apple-touch-icon"  href="./image/logo2.png" /> -->
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
 </head>
 <body>
     <h3>测试demo2</h3>
-    <img src="./image/logo2.png">
+    <img src="./image/logo.png">
     <div class="test-text"></div>
 </body>
 </html>
