--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="点触">
-    <!-- <link rel="apple-touch-icon"  href="./image/logo2.png" /> -->
+    <!-- ios兼容 必须加上这个否则添加到主屏幕上不会显示图标,而且必须是png图片-->
+    <link rel="apple-touch-icon"  href="./image/logo2.png" />
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
