feat:ios的首屏动画

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +15,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="点触">
+    <link rel="apple-touch-startup-image" href="./image/bg.png" />
     <!-- ios兼容 必须加上这个否则添加到主屏幕上不会显示图标,而且必须是png图片-->
-    <link rel="apple-touch-icon"  href="./image/logo2.png" />
+    <link rel="apple-touch-icon" href="./image/logo2.png" />
     <link rel="manifest" href="./manifest.json">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./index.js"></script>
 </head>
+
 <body>
-    <h3>测试demo2</h3>
-    <img src="./image/logo.png">
+    <h3>测试demo1</h3>
     <div class="test-text"></div>
 </body>
+
 </html>
