--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </head>
 
 <body>
-    <h3>测试demo1</h3>
+    <h3>测试demo2</h3>
+    <button id="notification-btn">消息提醒</button>
     <div class="test-text"></div>
 </body>
 
